2007-12-31 21:22-EST Gregory John Casamento <greg_casamento@yahoo.com>

	* English.lproj/GormInconsistenciesPanel.gorm: Error panel to show
	detected inconsistencies.
	* English.lproj/GormPrefGeneral.gorm: Added option to turn on
	repair method.
	* GNUmakefile: Added reference to new gorm file.
	* GormCore/GormGormWrapperLoader.m: Added code to bring up the 
	new panel and show the errors.
	* GormPrefs/GormGeneralPref.[mh]: Added new method and ivar to
	handle switch for consistency checking.

2007-12-19 19:03-EST Gregory John Casamento <greg_casamento@yahoo.com>

	* GormCore/GormGormWrapperLoader.m
	* GormCore/GormNibWrapperBuilder.m: Correction for bug#21845.

2007-12-04 20:52-EST Gregory John Casamento <greg_casamento@yahoo.com>

	* English.lproj/GormViewSizeInspector.gorm: Correction for
	bug#19640.

2007-11-30 15:58-EST Gregory John Casamento <greg_casamento@yahoo.com>

	* GNUmakefile
	* GormLib/GNUmakefile
	* GormLib/IBPlugin.h
	* GormLib/IBPlugin.m
	* GormLib/InterfaceBuilder.h
	* Plugins/GNUmakefile: First cut at changes to add Plugin support
	to Gorm.

2007-11-11 15:38-EST Gregory John Casamento <greg_casamento@yahoo.com>

	* ANNOUNCE
	* Documentation/Gorm.texi
	* GNUmakefile
	* GormCore/GormFilePrefsManager.m
	* GormInfo.plist
	* NEWS
	* Palettes/GNUmakefile
	* README
	* Resources/Defaults.plist
	* Version: Preparing for release.

2007-11-11 00:18-EST Gregory John Casamento <greg_casamento@yahoo.com>

	* Palettes/0Menus/GormMenuItemAttributesInspector.m: call
	itemChanged: so that changes are seen immediately in the menu.

2007-11-10 21:46-EST Gregory John Casamento <greg_casamento@yahoo.com>

	* Documentation/news.texi
	* Documentation/readme.texi: Update of documentation.
	* Palettes/0Menus/GormMenuItemAttributesInspector.gorm
	* Palettes/0Menus/GormMenuItemAttributesInspector.h
	* Palettes/0Menus/GormMenuItemAttributesInspector.m
	* Palettes/2Controls/GormButtonAttributesInspector.m: Add
	key equivalent drop down for special keys for menu items.
