@@ -34,9 +34,9 @@
     ApplicationDescription = "[GNUstep | Graphical] Object Relationship Modeller";
     ApplicationIcon = "Gorm.tiff";
     ApplicationName = "Gorm";
-    ApplicationRelease = "Gorm 1.2.2 (Release)";
+    ApplicationRelease = "Gorm 1.2.3 (SVN)";
     Authors = ("Gregory John Casamento <greg_casamento@yahoo.com>","Richard Frith-Macdonald <rfm@gnu.org>","Pierre-Yves Rivaille <pyrivail@ens-lyon.fr>");
     Copyright = "Copyright (C) 1999, 2000, 2001, 2002, 2003, 2004, 2005, 2006 FSF";
     CopyrightDescription = "Released under the GNU General Public License 3.0";
-    NSBuildVersion = "1.2.2 Nov 05 2007";
+    NSBuildVersion = "1.2.3 Dec 31 2007";
 }
