@@ -1,3 +1,9 @@
+2008-01-01 14:03-EST Gregory John Casamento <greg_casamento@yahoo.com>
+
+	* GormCore/GormGormWrapperLoader.m: More corrections to the
+	_repairFile method.
+	* GormInfo.plist: Changed to reflect SVN status
+
 2007-12-31 21:22-EST Gregory John Casamento <greg_casamento@yahoo.com>
 
 	* English.lproj/GormInconsistenciesPanel.gorm: Error panel to show
